<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Incoming call&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="answer">Answer</string>
    <string name="ignore">Ignore</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="icon_description">Contact image</string>

</resources>